# scroll

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  LICENSE  Makefile  README.md  README_AR.rtl.md  Scroll  TagJenkinsfile  codecov.yml  coverage.bridge.txt  go.work  go.work.sum  metric.go  run.sh
.github/: pull_request_template.md
.github/scripts/: bump_version_dot_go.mjs
.github/workflows/: bridge.yml  bridge_hisotry_api.yml  bridge_history_api.yml  bump_version.yml  ci.yml  common.yml  contracts.yaml  contracts.yml  coordinator.yml  database.yml  docker-coordinator-api-arm64.yml  docker.yaml  docker.yml  integration.yaml  integration.yml  intermediate-docker.yml  internal.yml  miner_api.yml  prover.yml  prover_rust.yml  prover_stats_api.yml  roller.yml  rollup.yml  rollupscan-backend.yml  store.yml  utils.yml
assets/: agg_proof  evm_proof  state_proof
bridge/: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  config.json  coverage.sh  coverage.txt  go.mod  go.sum  interface.go  test_config.json
bridge-history-api/: .gitignore  Makefile  README.md  config.json  go.mod  go.sum
bridge-history-api/abi/: backend_abi.go
bridge-history-api/conf/: config.json  config.sepolia.json
bridge-history-api/config/: config.go
bridge-history-api/controller/: controller.go
bridge-history-api/cross_msg/: batch_info_fetcher.go  block_timestamp_fetcher.go  cross_msg_fetcher.go  fetch_missing_event.go  msg_fetcher_test.go  reorg_handle.go  withdraw_trie.go  withdraw_trie_test.go
bridge-history-api/crossmsg/: batch_info_fetcher.go  block_timestamp_fetcher.go  cross_msg_fetcher.go  fetch_missing_event.go  (+2 more)
client/: client.go
common/: .gitignore  Makefile  go.mod  go.sum
common/libzkp/impl/: Cargo.toml  Makefile
common/libzkp/impl/src/: batch.rs  batch_prover.rs  chunk.rs  chunk_verifier.rs  lib.rs  prove.rs  prove_batch.rs  types.rs  utils.rs  verifier.rs  verify.rs
common/libzkp/impl/src/verifier/: darwin.rs  darwin_v2.rs  edison.rs
common/libzkp/impl/tests/: chunk_test.rs
contracts/: .env.example  .gitignore  .gitmodules  .prettierignore  .prettierrc  .solcover.js  Dockerfile.deploy  Dockerfile.gen-configs  README.md  ScrollChainWithBlobTest.ts  circomlib.d.ts  foundry.toml  genesis.json.example  hardhat.config.ts  package-lock.json  package.json  remappings.txt  tsconfig.json
coordinator/: .gitignore  Dockerfile  Jenkinsfile  Makefile  README.md  api.go  api_client.go  api_debug.go  api_test.go  config.json  conns.go  download_assets.sh  go.mod  go.sum  manager.go  manager_test.go  roller_metrics.go  rollers.go  server.go  task_proposer.go  test_config.json
database/: .gitignore  Makefile  README.md  config.go  config.json  config_test.go  config_work.json  go.mod  go.sum  orm_factory.go  orm_test.go
docs/: contracts  tests.md
internal/: Jenkinsfile  Makefile  config.json  coverage.txt  go.mod  go.sum  integration_test.go
miner-api/: Makefile  go.mod  go.sum
prover/: .dockerignore  .gitignore  1_transfer.json  Cargo.toml  Dockerfile  Makefile  README.md  config.json  go.mod  go.sum  prover.go  run_batch.sh
prover-stats-api/: Makefile  README  README.md  go.mod  go.sum
prover/client/: client.go  types.go
prover/cmd/: main.go
prover/cmd/app/: app.go  app_test.go  mock_app.go
prover/conf/: config.json
prover/config/: config.go
prover/core/: batch_prover.go  batch_prover_test.go  chunk_prover.go  jemalloc.go  mock.go  prover.go  prover_oom_test.go  prover_test.go
prover/prover/: mock.go  prover_test.go
prover/src/: config.rs  coordinator_client.rs  geth_client.rs  lib.rs  main.rs  prover.rs  prover_core.rs  task_processor.rs  types.rs  utils.rs  version.rs  zk_circuits_handler.rs
prover/src/coordinator_client/: api.rs  errors.rs  listener.rs  types.rs
prover/src/zk_circuits_handler/: bernoulli.rs  common.rs  curie.rs  darwin.rs  darwin_v2.rs  edison.rs  euclid.rs  sindri.rs
prover/store/: stack.go  stack_test.go
prover/utils/: utils.go
prover_rust/: Cargo.toml  Makefile  config.json  print_halo2gpu_version.sh  print_high_zkevm_version.sh
prover_rust/src/: config.rs  coordinator_client.rs  geth_client.rs  key_signer.rs  main.rs  prover.rs  task_cache.rs  task_processor.rs  types.rs  utils.rs  utils_log.rs  version.rs  zk_circuits_handler.rs
prover_rust/src/coordinator_client/: api.rs  errors.rs  types.rs
prover_rust/src/geth_client/: types.rs
prover_rust/src/zk_circuits_handler/: base.rs  bernoulli.rs  curie.rs  next.rs  types.rs
roller/: .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  config.json  config.toml  go.mod  go.sum  halo2gpu_version.sh  roller.go
roller/core/prover/rust/: Cargo.toml
roller/core/prover/rust/src/: prove.rs
rollup/: .gitignore  Dockerfile  Makefile  README.md  config.json  coverage.sh  genesis.json  go.mod  go.sum  run_test.sh
rollup/libzstd/: .gitignore  Cargo.toml  Makefile  rs_zstd.h
rollup/libzstd/src/: lib.rs
rollupscan/backend/: .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
rollupscan/backend/config/: default.toml  development.toml  production.toml
rollupscan/backend/db/tests/: test.sql
rollupscan/backend/scripts/: import_mock_data.sh  start.sh  stop.sh
rollupscan/backend/src/: cache.rs  lib.rs  settings.rs
rollupscan/backend/src/db/: mod.rs
rollupscan/backend/src/db/models/: block_result.rs  mod.rs  rollup_result.rs
rollupscan/backend/src/db/queries/: block_result_query.rs  mod.rs  rollup_result_query.rs  tps_query.rs
rollupscan/backend/src/open_api/: apis.rs  mod.rs
rollupscan/backend/src/open_api/objects/: l2_block.rs  mod.rs
rollupscan/backend/src/open_api/responses/: l2_blocks_response.rs  last_block_nums_response.rs  mod.rs  tps_response.rs
scripts/: download_params.sh  init_repo.sh
specs/: CrossDomainMessaging.md  Deposit.md  Overview.md  Withdraw.md
store/: Jenkinsfile  Makefile  connection.go  go.mod  go.sum  orm_factory.go  orm_test.go
utils/: Makefile  db_client.go  flags.go  go.mod  go.sum  logger.go
(+1891 files in other folders)
