[package]
name = "rollup_explorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rollup_explorer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = [ "serde" ] }
config = "0.13"
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
poem = "1.3"
poem-openapi = { version = "2.0", features = ["chrono", "rust_decimal", "swagger-ui"]}
rust_decimal = "1.26"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
sqlx = { version = "0.6", features = [ "chrono", "decimal", "postgres", "runtime-tokio-rustls" ] }
tokio = { version = "1", features = ["full"] }
